test/2/type/poly-multiple-methods-match.ploy
polyfn f ()%(^T);
method f ()%Int 0;
method f ()%Str 'a';

main = {
  x = f()
}
